# eth-rescue

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/v1/: 00-roadmap.md  01-foundation-chain-abstractions.md  02-rescue-executor-contract.md  03-sponsored-7702-backend.md  04-alchemy-portfolio-discovery.md  05-emergency-mode.md  06-standard-mode.md  07-hardening-deployment-release.md
src/eth_rescue/: abi.py  calldata.py  prompts.py  relay.py  rescue.py  templates.py  ui.py  wizard.py
src/rescue_scripts/: calldata.py  flashbots.py  prompts.py  relay.py  rescue.py  templates.py  types.py  ui.py  wizard.py
tests/: test_calldata.py  test_prompts.py  test_relay.py  test_rescue.py  test_templates.py  test_ui.py  test_wizard.py
tests/integration/: conftest.py  test_eip7702.py  test_rescue_flow.py
tests/integration/contracts/: foundry.toml
tests/integration/contracts/src/: Fixtures.sol
